--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,5 @@
 spring.h2.console.enabled=true
 server.port=9090
+spring.datasource.url=jdbc:h2:./db/testDb;DB_CLOSE_ON_EXIT=FALSE;AUTO_SERVER=TRUE
+spring.jpa.hibernate.ddl-auto=update
+spring.thymeleaf.cache=false
